added login page

--- a/ca;;omg.html
+++ b/ca;;omg.html
@@ -17,19 +17,19 @@
                 <form class="col-sm-12" autocomplete="off">
                     <div class="mb-3">
                       <label for="email" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="email">
+                      <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                       <label for="password" class="form-label">Password</label>
                       <input type="password" class="form-control" id="password">
                     </div>
 
-                    <button onclick="formSubmit()" type="button" class="btn btn-primary">Submit</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
                   </form>
             </div>
         </div>
     </section>
 </body>
 
-<script src="./src/js/client.js"></script>
+<script src="./src/index.js"></script>
 </html>
