--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <body class="bg-light">
     <section class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-sm-4 login-box" id="login_box">
+        
+        <!-- LOGIN START HERE -->
+
+        <div class="row justify-content-center" id="login_box">
+            <div class="col-sm-4 login-box" >
                 <h2 class="text-center"> Login </h2>
 
                 <form class="col-sm-12" autocomplete="off">
@@ -24,6 +27,21 @@
                   </form>
             </div>
         </div>
+        
+        <!-- LOGIN END HERE -->
+
+        <!-- VIDEO CALL START -->
+
+        <div class="row video_call">
+            <div class="col-sm-12 call_frame">
+                <div class="video_call_tag">
+                    <video width="1323" height="639" controls></video>
+                </div>
+            </div>
+        </div>
+
+        <!-- VIDEO CALL END -->
+
     </section>
 </body>
 
