adding video html and js func

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- VIDEO CALL START -->
 
-        <div class="row video_call">
+        <div class="row video_call" id="video_box">
             <div class="col-sm-12 call_frame">
                 <div class="video_call_tag">
                     <video width="1323" height="639" controls></video>
