added call offer

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                         <div class="col-sm-12 call_window">
                             <form class="col-sm-12" autocomplete="off">
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Username</label>
-                                    <input type="text" class="form-control" id="username">
+                                    <label for="caller_username" class="form-label">Username</label>
+                                    <input type="text" class="form-control" id="caller_username">
                                 </div>
             
-                                <button onclick="formSubmit()" type="button" class="btn btn-primary">Call</button>
+                                <button onclick="callNow()" type="button" class="btn btn-primary">Call</button>
                               </form>
                         </div>
                     </div>
