added video call working

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <div class="video_call_tag">
                         <div class="side_my_own_video" id="side_my_own_video">
                             <video width="620 height="620" id="local_video_sream" autoplay></video>
+                            <video width="620 height="620" id="other_local_video_sream" autoplay></video>
                         </div>
                     </div>
                 </div>
